# CPP-Initials

./: .gitignore  CMakeLists.txt  log.txt  main.cpp
NamedPipes_fifo/: fifo_client.cpp  fifo_server.cpp
NamedPipes_fifo/RealExampleMQueue/: consumer.cpp  emitter.cpp
